--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="title_activity_unit">Selecciona OA</string>
     <string name="label_enter_button">Enter</string>
     <string name="label_msg_login">Authenticating…</string>
-    <string name="title_activity_lesson">Select a lesson</string>
+    <string name="title_activity_lesson">Ejercicios</string>
     <string name="title_activity_book">Seleciona temática</string>
     <string name="logo">logo</string>
     <string name="gcm_defaultSenderId">11198188691</string>
@@ -24,4 +24,6 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="close">Close</string>
     <string name="title_activity_resource">Recursos Multimedia</string>
+    <string name="title_activity_video">VideoActivity</string>
+    <string name="menu_resource">Recursos multimedia</string>
 </resources>
